# vexta

./: .gitignore  COMMIT_SIGNING.md  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  RELEASE_WORKFLOW.md  REVIEWERS  SECURITY.md  configure.ac  libvextaconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md  gui_issue.md
.github/workflows/: ci.yml
build-aux/m4/: vexta_find_bdb48.m4  vexta_qt.m4
contrib/genesis/: genesis.py
contrib/init/: README.md  vextad.conf  vextad.init  vextad.openrc  vextad.openrcconf  vextad.service  vextad.service.app.service
contrib/vexta/: README.md  install-node.sh  start-mainnet.sh  stop-node.sh  vexta-mainnet.conf  vexta-regtest.conf  vexta-testnet.conf  vexta.conf.example  (+1 more)
doc/: README.md  digibyte-conf.md  init.md  shared-libraries.md
doc/man/: Makefile.am  vexta-cli.1  vexta-qt.1  vexta-tx.1  vexta-util.1  vexta-wallet.1  vextad.1
docs/: VPS_DEPLOYMENT.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  amount.h  chain.cpp  chain.h  chainparams.cpp  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.h  compat.h  dandelion.cpp  dbwrapper.cpp  deploymentinfo.cpp  init.cpp  init.h  key.cpp  key_io.cpp  mapport.cpp  miner.cpp  miner.h  net.cpp  net.h  net_processing.cpp  netaddress.h  netbase.h  noui.h  pow.cpp  pow.h  protocol.h  psbt.h  randomenv.cpp  shutdown.cpp  sync.cpp  (+15 more)
(+363 files in other folders)
