dist_man1_MANS=

if BUILD_DIGIBYTED
  dist_man1_MANS+=vextad.1
endif

if ENABLE_QT
  dist_man1_MANS+=vexta-qt.1
endif

if BUILD_VEXTA_CLI
  dist_man1_MANS+=vexta-cli.1
endif

if BUILD_VEXTA_TX
  dist_man1_MANS+=vexta-tx.1
endif

if BUILD_VEXTA_UTIL
  dist_man1_MANS+=vexta-util.1
endif

if ENABLE_WALLET
if BUILD_VEXTA_WALLET
  dist_man1_MANS+=vexta-wallet.1
endif
endif
